# airflow-tm1-implementation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
airflow_tm1/: __main__.py
airflow_tm1/airflow/: __init__.py  callback.py  dynamic_task_group_sample.py  simple_task_sample.py  synchronize_variables.py
airflow_tm1/utils/: config.py  tm1.py
config/: config.ini.example
dags/: dynamic_workflow.py  housekeep_logs.py  simple_workflow.py  sync_variables.py
